[package]
name = "tari_pubsub"
version = "0.2.0"
authors = ["The Tari development Community"]
description = "Single publisher with multiple subscribers to topic messages"
license = "BSD-3-Clause"
keywords = ["pubsub", "async","futures", "topic"]
repository = "https://github.com/tari-project/pubsub"
homepage = "https://tari.com"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_broadcast_channel = { version="^0.2" }
futures = { version = "^0.3.1", features=["async-await"] }